more fixes, testimonials changed, title spacing

--- a/app/assets/stylesheets/components/_testim.scss
+++ b/app/assets/stylesheets/components/_testim.scss
@@ -2,6 +2,7 @@
 
 #title {
   padding-top: 16px;
+  font-size: 50px;
 }
 
 .container {
@@ -24,9 +25,7 @@
   background-color: white;
 }
 
-#head {
-  border-radius: 50%;
+#stars {
   width: 200px;
-  height: 200px;
-  padding-bottom: 24px;
+  height: 100px;
 }
